Fix header overflow
The header was overflowing on mobile causing the content to scroll horizontally.
This commit fixes that by reducing the width of the heading.

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -65,9 +65,10 @@ header {
       }
 
       h1 {
-        margin: 10px 0 0 $horizontal-margin;
+        margin: 0;
+        padding: 10px 0 0 $horizontal-margin;
         position: static;
-        width: 100%;
+        width: 90%;
       }
     }
 
